# eruption-forecast

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONSENSUS_CALCULATION.md  DIAGRAM.md  LICENSE  README.md  REVIEW.md  SUMMARY.md  TODO.md  WIKI.md  config.example.yaml  evaluate.py  feature_selection_comparison.py  forecast-lekr.py  forecast.py  main.py  plot-shap.py  predict.py  pyproject.toml  ruff.toml  scenarios.py  semeru.py  shap-explanation.py  test.ipynb  test_feature_selection_comparison.py  test_replot.py  test_tremor_calculation.py  workflow.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.omm/data-flow/: constraint.md  context.md  description.md  diagram.mmd  meta.yaml
.omm/data-flow/cache-store/: description.md  meta.yaml
.omm/data-flow/ensemble-bundle/: description.md  meta.yaml
.omm/data-flow/eval-artifacts/: description.md  meta.yaml
.omm/data-flow/feature-matrix/: description.md  meta.yaml
.omm/data-flow/forecast-results/: description.md  meta.yaml
.omm/data-flow/label-csv/: description.md  meta.yaml
.omm/data-flow/raw-seismic/: description.md  meta.yaml
.omm/data-flow/seed-artifacts/: description.md  meta.yaml
.omm/data-flow/shap-artifacts/: description.md  meta.yaml
.omm/data-flow/tremor-csv/: description.md  meta.yaml
.omm/overall-architecture/: context.md  description.md  diagram.mmd  meta.yaml
.omm/overall-architecture/config/: description.md  meta.yaml
.omm/overall-architecture/ensemble/: description.md  diagram.mmd  meta.yaml
.omm/overall-architecture/features/: description.md  diagram.mmd  meta.yaml
.omm/overall-architecture/label/: description.md  diagram.mmd  meta.yaml
.omm/overall-architecture/model/: description.md  diagram.mmd  meta.yaml
.omm/overall-architecture/plots/: description.md  meta.yaml
.omm/overall-architecture/sources/: description.md  diagram.mmd  meta.yaml
.omm/overall-architecture/tremor/: description.md  diagram.mmd  meta.yaml
.omm/overall-architecture/utils/: description.md  meta.yaml
.omm/pipeline/: constraint.md  context.md  description.md  diagram.mmd  meta.yaml
.omm/pipeline/calculate/: description.md  diagram.mmd  meta.yaml
.omm/pipeline/evaluate/: description.md  diagram.mmd  meta.yaml
.omm/pipeline/explain/: description.md  diagram.mmd  meta.yaml
.omm/pipeline/predict/: description.md  diagram.mmd  meta.yaml
.omm/pipeline/train/: description.md  diagram.mmd  meta.yaml
docs/: api-reference.md  architecture.md  configuration.md  output-structure.md  step-by-step-guide.md  visualization.md
examples/: build-features-training.ipynb  build-features.ipynb  build-label.ipynb  build-label.py  calculate-test.ipynb  plot-tmp.ipynb  tsfresh.ipynb
src/eruption_forecast/: __init__.py  calculate.py  data_container.py  dsar.py  label.py  logger.py  plot.py  rsam.py  sds.py  tremor_data.py  utils.py
src/eruption_forecast/config/: __init__.py  base_config.py  constants.py  evaluation_config.py  explanation_config.py  forecast_config.py  pipeline_config.py  prediction_config.py  training_config.py
src/eruption_forecast/dataclass/: __init__.py  classifier_ensemble_summary.py  classifier_explanation.py  model_data.py  station_data.py  waterfall.py
src/eruption_forecast/decorators/: __init__.py  decorator_class.py  notify.py  timer.py
src/eruption_forecast/ensemble/: __init__.py  base_ensemble.py  classifier_ensemble.py  dalex_explainer_ensemble.py  explainer_ensemble.py  metrics_ensemble.py  new_metrics_ensemble.py  seed_ensemble.py
src/eruption_forecast/features/: __init__.py  constants.py  feature_count_sweep.py  (+3 more)
test/: _convert_mseed_OJN.py  build-label.ipynb  load-consensus-all.ipynb  load-consensus.ipynb  load-mseed.ipynb  plot-tmp.ipynb  plot-tremor-data.ipynb  test-convert-mseed.ipynb  test-convert-mseed.py  test-label.ipynb  test-plot.ipynb  tsfresh.ipynb
tests/: README.md  __init__.py  test_classifier_comparator.py  test_classifier_ensemble.py  test_classifier_model.py  test_dalex_explainer_ensemble.py  test_data_container.py  test_dynamic_label_builder.py  test_explainer_ensemble.py  test_explanation_model.py  test_feature_count_sweep.py  test_feature_selector.py  test_features_builder.py  test_forecast_config.py  test_forecast_model.py  test_implementation.py  test_imports.py  test_label_builder.py  test_label_plots.py  test_logger.py  test_metrics_computer.py  test_model_trainer_train.py  test_notify_decorator.py  test_pipeline_config.py  test_refactoring.py  test_replot.py  test_seed_ensemble.py  test_send_telegram_notification.py  test_shap_plots.py  test_sklearnex.py  test_station_data.py  test_train_model_dynamic_classifier.py  test_train_model_fixed.py  test_tremor_calculation.py  test_tremor_matrix_builder.py  test_utils.py  verify_dsar.py
wiki/: API-Reference.md  Architecture.md  Classifiers-and-CV.md  Configuration.md  Data-Sources.md  Evaluation-Workflow.md  Evaluation-and-Forecasting.md  Explanation-Workflow.md  Feature-Count-Sweep.md  Getting-Started.md  Home.md  Installation.md  Output-Structure.md  Pipeline-Walkthrough.md  Prediction-Workflow.md  Quick-Start.md  Training-Workflow.md  Training-Workflows.md  Usage.md  Visualization.md
(+182 files in other folders)
