[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[project]
name = "eruption-forecast"
version = "0.2.1"
authors = [
    {name = "Martanto", email = "martanto@live.com"},
]
description = "Eruption forecast modelling"
readme = "README.md"
license = "MIT"
keywords = ["eruption", "forecast", "volcano", "volcanology", "seismic"]
requires-python = ">=3.11"
dependencies = [
    "obspy>=1.5.0",
    "tsfresh",
    "numba<0.63",
    "loguru",
    "pandas>=3.0.2",
    "pip>=26.1.1",
    "imbalanced-learn>=0.14.1",
    "scikit-learn>=1.8",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
    "shap>=0.51.0",
    "python-dotenv>=1.2.2",
    "pip-system-certs>=5.3",
    "pyarrow>=18.0.0",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    "uv-build",
    "ruff",
    "ty",
    "ipykernel",
    "notebook",
    "pytest",
    "ipywidgets",
    "pandas-stubs~=3.0.3",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that send real external requests (e.g. Telegram API)",
]

[tool.uv]
cache-dir = "./.cache/uv"
build-constraint-dependencies = ["setuptools==80.8.0"]

[project.urls]
Homepage = "https://github.com/martanto/eruption-forecast"
Issues = "https://github.com/martanto/eruption-forecast/issues"
